rename module and make format